namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: charon-blog
  labels:
    name: charon-blog
