service.yaml
apiVersion: v1
kind: Service
metadata:
  name: charon-blog-service
  namespace: charon-blog
  labels:
    app: charon-blog
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: charon-blog
